[gd_scene load_steps=15 format=3 uid="uid://blvk2ibfa64dk"]

[ext_resource type="Script" path="res://main_game_2d_node.gd" id="1_nmbyp"]
[ext_resource type="PackedScene" uid="uid://cdeyqc0j7jgsn" path="res://player.tscn" id="1_rwh82"]
[ext_resource type="PackedScene" uid="uid://bbalocc61c1dj" path="res://tree_1_static_node.tscn" id="2_a5e62"]
[ext_resource type="Texture2D" uid="uid://8f0cbj6y6hu" path="res://CobblestoneRoad.png" id="3_20rus"]
[ext_resource type="PackedScene" uid="uid://cwb4xirnn5025" path="res://tree_texture_1.tscn" id="3_ykxur"]
[ext_resource type="PackedScene" uid="uid://cesdmk1wkmbxp" path="res://tree_texture_2.tscn" id="4_cc48r"]
[ext_resource type="PackedScene" uid="uid://0aib1egv6tpb" path="res://tree_texture_3.tscn" id="5_8xrui"]
[ext_resource type="PackedScene" uid="uid://bdjfc7djfjec3" path="res://campfire_static_body.tscn" id="6_n7i0w"]
[ext_resource type="PackedScene" uid="uid://6cykhroc05l8" path="res://interface.tscn" id="8_1f6ai"]
[ext_resource type="Script" path="res://Teleport.gd" id="10_22k8u"]
[ext_resource type="PackedScene" uid="uid://b6sne32qhuwvw" path="res://skeleton_warrior.tscn" id="11_wq27p"]
[ext_resource type="PackedScene" uid="uid://de7utiv60rgw2" path="res://Castle.tscn" id="12_l081q"]

[sub_resource type="Curve2D" id="Curve2D_2dkal"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ysn4v"]
radius = 27.1662

[node name="Root" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_nmbyp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -860.0
offset_top = -648.0
offset_right = 2645.0
offset_bottom = 1460.0
color = Color(0, 0, 0, 1)

[node name="player" parent="." groups=["Player"] instance=ExtResource("1_rwh82")]
unique_name_in_owner = true
position = Vector2(278.923, 458.394)
collision_layer = 5

[node name="Path2D" type="Path2D" parent="player"]
curve = SubResource("Curve2D_2dkal")

[node name="PathFollow2D" type="PathFollow2D" parent="player/Path2D"]

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -26
offset_left = -788.0
offset_top = -603.0
offset_right = 2585.0
offset_bottom = 1428.0
color = Color(0.262745, 0.407843, 0.376471, 1)

[node name="MapBorders" type="StaticBody2D" parent="."]
y_sort_enabled = true
position = Vector2(258.48, 110.337)

[node name="TreeTexture22" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-304.48, 617.663)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MapBorders"]
polygon = PackedVector2Array(-179.48, -53.3371, 362.52, -47.3371, 867.52, -16.3371, 870.52, -161.337, -355.48, -169.337, -348.48, 1123.66, 1843.52, 1114.66, 1801.52, 49.6629, 1580.52, 129.663, 1621.52, 947.663, -199.48, 960.663)

[node name="TreeTexture" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-39.4797, -31.3371)

[node name="TreeTexture2" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(134.52, -56.3371)

[node name="TreeTexture3" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-231.48, -35.3371)

[node name="TreeTexture4" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(639.52, -49.3371)

[node name="TreeTexture5" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(383.52, -55.3371)

[node name="TreeTexture6" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(266.52, -38.3371)

[node name="TreeTexture7" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(855.52, -44.3371)

[node name="TreeTexture8" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-308.48, 216.663)

[node name="TreeTexture9" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-231.48, -35.3371)

[node name="TreeTexture10" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-225.48, -42.3371)

[node name="TreeTexture11" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-229.48, 61.6629)

[node name="TreeTexture12" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-258.48, 133.663)

[node name="TreeTexture13" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-293.48, 18.6629)

[node name="TreeTexture14" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-267.48, 488.663)

[node name="TreeTexture15" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-559.48, 578.663)

[node name="TreeTexture16" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(277.52, -85.3371)

[node name="TreeTexture17" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-328.439, -127.011)

[node name="TreeTexture18" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(69.5203, -106.337)

[node name="TreeTexture19" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-270.959, -66.6742)

[node name="TreeTexture20" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(484.52, -96.3371)

[node name="TreeTexture21" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-246.48, 270.663)

[node name="TreeTexture23" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-228.48, 699.663)

[node name="TreeTexture24" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(250.52, 1112.66)

[node name="TreeTexture25" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-59.4797, 1118.66)

[node name="TreeTexture26" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-254.48, 832.663)

[node name="TreeTexture27" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(504.52, 1081.66)

[node name="TreeTexture28" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(772.52, 1095.66)

[node name="TreeTexture29" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-214.48, 1047.66)

[node name="TreeTexture30" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-326.48, 929.663)

[node name="TreeTexture31" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-292.48, 985.663)

[node name="TreeTexture32" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-473.48, 1100.66)

[node name="TreeTexture33" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-150.48, 1215.66)

[node name="TreeTexture34" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(1110.52, 1110.66)

[node name="TreeTexture35" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1735.52, 1134.66)

[node name="TreeTexture36" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(1778.52, 906.663)

[node name="TreeTexture37" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1738.52, 749.663)

[node name="TreeTexture38" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(1506.52, 1068.66)

[node name="TreeTexture39" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1263.52, 1074.66)

[node name="TreeTexture40" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(1738.52, 509.663)

[node name="TreeTexture41" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1797.52, 268.663)

[node name="TreeTexture42" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(1735.52, 236.663)

[node name="TreeTexture43" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(1682.52, 406.663)

[node name="TreeTexture44" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1457.52, 1119.66)

[node name="TreeTexture45" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(959.52, 1042.66)

[node name="TreeTexture46" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(917.52, 1140.66)

[node name="TreeTexture47" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(66.5203, 1055.66)

[node name="TreeTexture48" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(368.52, 1038.66)

[node name="TreeTexture49" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(547.52, 1144.66)

[node name="TreeTexture50" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(638.52, 1053.66)

[node name="TreeTexture51" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(268.52, 1044.66)

[node name="TreeTexture52" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-356.48, 1129.66)

[node name="TreeTexture53" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(100.52, 1166.66)

[node name="TreeTexture54" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(338.52, 1146.66)

[node name="TreeTexture55" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(781.52, -146.337)

[node name="TreeTexture56" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(350.52, -169.337)

[node name="TreeTexture57" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(85.5203, -162.337)

[node name="TreeTexture58" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-163.48, -171.337)

[node name="TreeTexture59" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(573.52, -214.337)

[node name="TreeTexture60" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-448.48, 44.6629)

[node name="TreeTexture61" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-221.48, 32.6629)

[node name="TreeTexture62" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-557.48, 650.663)

[node name="TreeTexture63" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-599.48, 741.663)

[node name="TreeTexture64" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-578.48, 1050.66)

[node name="TreeTexture65" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-671.48, 883.663)

[node name="TreeTexture66" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-517.48, 1243.66)

[node name="TreeTexture67" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(136.52, 1272.66)

[node name="TreeTexture68" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-238.48, 1307.66)

[node name="TreeTexture69" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(432.52, 1285.66)

[node name="TreeTexture70" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(683.52, 1303.66)

[node name="TreeTexture71" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(317.52, 1200.66)

[node name="TreeTexture72" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(623.52, 1233.66)

[node name="TreeTexture73" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(926.52, 1352.66)

[node name="TreeTexture74" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(926.52, 1267.66)

[node name="TreeTexture75" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1179.52, 1222.66)

[node name="TreeTexture76" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(1159.52, 1334.66)

[node name="TreeTexture77" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1470.52, 1324.66)

[node name="TreeTexture78" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(1698.52, 1260.66)

[node name="TreeTexture79" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1399.52, 1269.66)

[node name="TreeTexture80" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(1718.52, 1374.66)

[node name="TreeTexture81" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(1870.52, 1239.66)

[node name="TreeTexture82" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(1967.52, 1012.66)

[node name="TreeTexture83" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(2046.52, 1144.66)

[node name="TreeTexture84" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(2158.52, 1265.66)

[node name="TreeTexture85" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(2040.52, 812.663)

[node name="TreeTexture86" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(1949.52, 670.663)

[node name="TreeTexture87" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(1955.52, 477.663)

[node name="TreeTexture88" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(1953.52, 310.663)

[node name="TreeTexture89" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(1939.52, 351.663)

[node name="TreeTexture90" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(2078.52, 265.663)

[node name="TreeTexture91" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(2071.52, 575.663)

[node name="TreeTexture92" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-85.4797, -406.337)

[node name="TreeTexture93" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(172.52, -463.337)

[node name="TreeTexture94" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(609.52, -495.337)

[node name="TreeTexture95" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(384.52, -406.337)

[node name="TreeTexture96" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(43.5203, -465.337)

[node name="TreeTexture97" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-391.48, -444.337)

[node name="TreeTexture98" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-541.48, -366.337)

[node name="TreeTexture99" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-433.48, -472.337)

[node name="TreeTexture100" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-571.48, -468.337)

[node name="TreeTexture101" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-668.48, -296.337)

[node name="TreeTexture102" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-586.48, -171.337)

[node name="TreeTexture103" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-711.48, -243.337)

[node name="TreeTexture104" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-599.48, 177.663)

[node name="TreeTexture105" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-586.48, -8.3371)

[node name="TreeTexture106" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-440.48, 258.663)

[node name="TreeTexture107" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-667.48, 269.663)

[node name="TreeTexture108" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-487.48, 172.663)

[node name="TreeTexture109" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-759.48, 711.663)

[node name="TreeTexture110" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-899.48, 699.663)

[node name="TreeTexture111" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-1145.48, 699.663)

[node name="TreeTexture112" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-837.48, 788.663)

[node name="TreeTexture113" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-1072.48, 797.663)

[node name="TreeTexture114" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-938.48, 870.663)

[node name="TreeTexture115" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-783.48, 929.663)

[node name="TreeTexture116" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-1075.48, 1023.66)

[node name="TreeTexture117" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-804.48, 984.663)

[node name="TreeTexture118" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-1027.48, 898.663)

[node name="TreeTexture119" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-802.48, 1071.66)

[node name="TreeTexture120" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-1109.48, 1157.66)

[node name="TreeTexture121" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-718.48, 1150.66)

[node name="TreeTexture122" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-964.48, 1123.66)

[node name="TreeTexture123" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-900.48, 1226.66)

[node name="TreeTexture124" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-713.48, 1212.66)

[node name="TreeTexture125" parent="MapBorders" instance=ExtResource("4_cc48r")]
position = Vector2(-1105.48, 1274.66)

[node name="TreeTexture126" parent="MapBorders" instance=ExtResource("3_ykxur")]
position = Vector2(-854.48, 1312.66)

[node name="TreeTexture127" parent="MapBorders" instance=ExtResource("5_8xrui")]
position = Vector2(-597.48, 1331.66)

[node name="Roads" type="Node2D" parent="."]

[node name="CobblestoneRoad9" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(105, 461)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad10" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(904.657, 460)
scale = Vector2(0.167699, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad11" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(1072.72, 459.182)
scale = Vector2(0.166519, 0.0703307)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad12" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(1257.72, 453.682)
scale = Vector2(0.191347, 0.0887503)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad13" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(1665, 238)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad14" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(1611, 271)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad15" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(1513.89, 321.318)
scale = Vector2(0.110997, 0.146056)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad16" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(1403, 390)
scale = Vector2(0.131295, 0.164476)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(78.9999, 460)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad2" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(178, 461)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad3" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(278, 461)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad4" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(379, 461)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad5" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(480, 460)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad6" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(580, 460)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad7" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(680, 460)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="CobblestoneRoad8" type="Sprite2D" parent="Roads"]
z_index = -25
position = Vector2(769, 461)
scale = Vector2(0.103916, 0.0710759)
skew = 1.07338
texture = ExtResource("3_20rus")

[node name="Tree1StaticBody23" parent="." instance=ExtResource("2_a5e62")]
z_as_relative = false
position = Vector2(551, 407)

[node name="CampfireStaticBody" parent="." instance=ExtResource("6_n7i0w")]
position = Vector2(730, 420)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Interface" parent="CanvasLayer2" instance=ExtResource("8_1f6ai")]
unique_name_in_owner = true
z_index = 1000
offset_left = 84.0
offset_top = 860.0
offset_right = 124.0
offset_bottom = 900.0

[node name="Teleport" type="Area2D" parent="."]
position = Vector2(1520.13, 257.369)
collision_layer = 0
collision_mask = 4
script = ExtResource("10_22k8u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Teleport"]
position = Vector2(188.868, -41.3687)
shape = SubResource("CircleShape2D_ysn4v")

[node name="SkeletonWarrior" parent="." instance=ExtResource("11_wq27p")]
position = Vector2(1044, 583)

[node name="SkeletonWarrior2" parent="." instance=ExtResource("11_wq27p")]
position = Vector2(1479, 284)

[node name="SkeletonWarrior3" parent="." instance=ExtResource("11_wq27p")]
position = Vector2(1721, 351)

[node name="Castle" parent="." instance=ExtResource("12_l081q")]
position = Vector2(1527, 224)

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="XP_changed" from="player" to="." method="_on_player_xp_changed"]
[connection signal="armor_changed" from="player" to="." method="_on_player_armor_changed"]
[connection signal="attack_changed" from="player" to="." method="_on_player_attack_changed"]
[connection signal="health_changed" from="player" to="." method="_on_player_health_changed"]
[connection signal="level_changed" from="player" to="." method="_on_player_level_changed"]
[connection signal="maxHealth_changed" from="player" to="." method="_on_player_max_health_changed"]
[connection signal="body_entered" from="Teleport" to="." method="_on_teleport_body_entered"]
[connection signal="body_entered" from="Teleport" to="Teleport" method="_on_body_entered"]
[connection signal="body_exited" from="Teleport" to="Teleport" method="_on_body_exited"]
[connection signal="body_shape_exited" from="Teleport" to="." method="_on_teleport_body_shape_exited"]
